--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/postprocessing": "^3.0.4",
     "babel-plugin-glsl": "^1.0.0",
+    "postprocessing": "^6.37.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "vite-plugin-glsl": "^1.3.3"
