--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.1.0",
     "@react-three/postprocessing": "^3.0.4",
     "babel-plugin-glsl": "^1.0.0",
     "postprocessing": "^6.37.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "three": "^0.174.0",
+    "three-stdlib": "^2.35.14",
     "vite-plugin-glsl": "^1.3.3"
   },
   "devDependencies": {
