--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postprocessing": "^6.37.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
     "three": "^0.174.0",
     "three-stdlib": "^2.35.14",
     "vite-plugin-glsl": "^1.3.3"
