--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@loaders.gl/core": "^4.3.3",
+    "@loaders.gl/gltf": "^4.3.3",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
     "@react-three/postprocessing": "^3.0.4",
     "babel-plugin-glsl": "^1.0.0",
+    "canvas": "^3.1.0",
     "framer-motion": "^12.6.2",
     "postprocessing": "^6.37.1",
+    "puppeteer": "^24.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
@@ -31,6 +35,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gl": "^8.1.6",
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   }
