--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "babel-plugin-glsl": "^1.0.0",
     "canvas": "^3.1.0",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.6.2",
     "postprocessing": "^6.37.1",
     "puppeteer": "^24.6.0",
